gl51-master/src/test/deca/context/invalid/test_rule3_17bis.deca
// Description
// Variable déclaré deux fois

{
    int b;
    int b; //b déjà déclaré
}